5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4128/executions/1575_1559.log
== TEST (2019-03-13 12:51:15) 
-- CODE:
frase = ""Ada Lovelace foi a primeira programadora da historia.""
print(frase. ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA)
-- ERROR:
File "XXXX", line 1
    frase = ""Ada Lovelace foi a primeira programadora da historia.""
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 12:51:50) 
-- CODE:
frase = print(""Ada Lovelace foi a primeira programadora da historia."")
print(frase. ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA)
-- ERROR:
File "XXXX", line 1
    frase = print(""Ada Lovelace foi a primeira programadora da historia."")
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 12:53:11) 
-- CODE:
frase = print(""Ada Lovelace foi a primeira programadora da historia."")
print(frase.upper)
-- ERROR:
File "XXXX", line 1
    frase = print(""Ada Lovelace foi a primeira programadora da historia."")
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 12:53:28) 
-- CODE:
frase =(""Ada Lovelace foi a primeira programadora da historia."")
print(frase.upper)
-- ERROR:
File "XXXX", line 1
    frase =(""Ada Lovelace foi a primeira programadora da historia."")
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 12:53:55) 
-- CODE:
frase =(""Ada Lovelace foi a primeira programadora da historia."")
print(frase.upper())
-- EXECUTION TIME:
0.218751
-- ERROR:
  File "/home/codebench/codes/1575/1559/main.py", line 1
    frase =(""Ada Lovelace foi a primeira programadora da historia."")
                ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 12:54:33) 
-- CODE:
frase =(""Ada Lovelace foi a primeira programadora da historia "")
print(frase.upper())
-- EXECUTION TIME:
0.132899
-- ERROR:
  File "/home/codebench/codes/1575/1559/main.py", line 1
    frase =(""Ada Lovelace foi a primeira programadora da historia "")
                ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 12:54:33) 
-- CODE:
frase =(""Ada Lovelace foi a primeira programadora da historia "")
print(frase.upper())
-- ERROR:
File "XXXX", line 1
    frase =(""Ada Lovelace foi a primeira programadora da historia "")
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 12:55:12) 
-- CODE:
frase =(""Ada Lovelace foi a primeira programadora da historia."")
print(frase.upper())
-- ERROR:
File "XXXX", line 1
    frase =(""Ada Lovelace foi a primeira programadora da historia."")
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 12:55:14) 
-- CODE:
frase =(""Ada Lovelace foi a primeira programadora da historia."")
print(frase.upper())
-- EXECUTION TIME:
0.140921
-- ERROR:
  File "/home/codebench/codes/1575/1559/main.py", line 1
    frase =(""Ada Lovelace foi a primeira programadora da historia."")
                ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 12:55:15) 
-- CODE:
frase =(""Ada Lovelace foi a primeira programadora da historia."")
print(frase.upper())
-- ERROR:
File "XXXX", line 1
    frase =(""Ada Lovelace foi a primeira programadora da historia."")
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 12:55:15) 
-- CODE:
frase =(""Ada Lovelace foi a primeira programadora da historia."")
print(frase.upper())
-- ERROR:
File "XXXX", line 1
    frase =(""Ada Lovelace foi a primeira programadora da historia."")
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 12:55:15) 
-- CODE:
frase =(""Ada Lovelace foi a primeira programadora da historia."")
print(frase.upper())
-- ERROR:
File "XXXX", line 1
    frase =(""Ada Lovelace foi a primeira programadora da historia."")
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 12:55:15) 
-- CODE:
frase =(""Ada Lovelace foi a primeira programadora da historia."")
print(frase.upper())
-- ERROR:
File "XXXX", line 1
    frase =(""Ada Lovelace foi a primeira programadora da historia."")
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 12:55:37) 
-- CODE:
frase=(""Ada Lovelace foi a primeira programadora da historia."")
print(frase.upper())
-- EXECUTION TIME:
0.168115
-- ERROR:
  File "/home/codebench/codes/1575/1559/main.py", line 1
    frase=(""Ada Lovelace foi a primeira programadora da historia."")
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 12:55:38) 
-- CODE:
frase=(""Ada Lovelace foi a primeira programadora da historia."")
print(frase.upper())
-- ERROR:
File "XXXX", line 1
    frase=(""Ada Lovelace foi a primeira programadora da historia."")
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 12:55:54) 
-- CODE:
frase=(""Ada Lovelace foi a primeira programadora da historia."")
print(frase.upper())
-- ERROR:
File "XXXX", line 1
    frase=(""Ada Lovelace foi a primeira programadora da historia."")
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 12:55:56) 
-- CODE:
frase=(""Ada Lovelace foi a primeira programadora da historia."")
print(frase.upper())
-- EXECUTION TIME:
0.191933
-- ERROR:
  File "/home/codebench/codes/1575/1559/main.py", line 1
    frase=(""Ada Lovelace foi a primeira programadora da historia."")
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 12:56:37) 
-- CODE:
frase= ("Ada Lovelace foi a primeira programadora da historia.")
print(frase.upper())
-- EXECUTION TIME:
0.180827
-- TEST CASE 1:
---- input:
nonono
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
